test/inputs/toplevel/bad/snippet-no-expansion.miros
string test
  name test
  desc a snippet without expansion
